load("//:gala.bzl", "gala_bootstrap_transpile", "gala_library", "gala_go_test")

exports_files(["lazy.gala"])

# Bootstrap transpile for stdlib embedding
gala_bootstrap_transpile(
    name = "lazy_go",
    src = "lazy.gala",
    out = "lazy.gen.go",
)

gala_library(
    name = "lazy",
    src = "lazy.gala",
    importpath = "martianoff/gala/lazy",
    visibility = ["//visibility:public"],
    deps = ["//go_interop"],
)

gala_go_test(
    name = "lazy_test",
    srcs = ["lazy_test.gala"],
    deps = [
        ":lazy",
        "//go_interop",
    ],
)
