load("@rules_go//go:def.bzl", "go_library", "go_test")
load("//:gala.bzl", "gala_binary", "gala_library", "gala_transpile")

exports_files([
    "option.gala",
    "immutable.gala",
    "tuple.gala",
    "either.gala",
])

gala_transpile(
    name = "option_go",
    src = "option.gala",
    out = "option.go",
)

gala_transpile(
    name = "immutable_go",
    src = "immutable.gala",
    out = "immutable.go",
)

gala_transpile(
    name = "tuple_go",
    src = "tuple.gala",
    out = "tuple.go",
)

gala_transpile(
    name = "either_go",
    src = "either.gala",
    out = "either.go",
)

go_library(
    name = "std",
    srcs = [
        "either.go",
        "immutable.go",
        "interfaces.go",
        "option.go",
        "tuple.go",
        "types.go",
    ],
    importpath = "martianoff/gala/std",
    visibility = ["//visibility:public"],
)

go_test(
    name = "std_test",
    srcs = [
        "as_test.go",
        "unapply_test.go",
    ],
    embed = [":std"],
    deps = ["@com_github_stretchr_testify//assert"],
)
