load("@rules_go//go:def.bzl", "go_library", "go_test")
load("//:gala.bzl", "gala_go_test", "gala_transpile")

exports_files([
    "option.gala",
    "immutable.gala",
    "tuple.gala",
    "either.gala",
    "iterable.gala",
])

# Filegroup for all GALA source files in std - used by tests
filegroup(
    name = "gala_sources",
    srcs = glob(
        ["*.gala"],
        exclude = ["*_test.gala"],
    ),
    visibility = ["//visibility:public"],
)

gala_transpile(
    name = "option_go",
    src = "option.gala",
    out = "option.go",
)

gala_transpile(
    name = "immutable_go",
    src = "immutable.gala",
    out = "immutable.go",
)

gala_transpile(
    name = "tuple_go",
    src = "tuple.gala",
    out = "tuple.go",
)

gala_transpile(
    name = "either_go",
    src = "either.gala",
    out = "either.go",
)

gala_transpile(
    name = "iterable_go",
    src = "iterable.gala",
    out = "iterable.go",
)

gala_transpile(
    name = "seq_go",
    src = "seq.gala",
    out = "seq.go",
)

go_library(
    name = "std",
    srcs = [
        "either.go",
        "immutable.go",
        "interfaces.go",
        "iterable.go",
        "option.go",
        "seq.go",
        "tuple.go",
        "types.go",
    ],
    importpath = "martianoff/gala/std",
    visibility = ["//visibility:public"],
)

go_test(
    name = "std_go_test",
    srcs = [
        "as_test.go",
        "unapply_test.go",
    ],
    embed = [":std"],
    deps = ["@com_github_stretchr_testify//assert"],
)

gala_go_test(
    name = "std_test",
    srcs = ["std_test.gala"],
)
