load("@rules_go//go:def.bzl", "go_library", "go_test")
load("//:gala.bzl", "gala_bootstrap_transpile", "gala_go_test")

exports_files([
    "constptr.gala",
    "either.gala",
    "errors.gala",
    "hashable.gala",
    "immutable.gala",
    "iterable.gala",
    "option.gala",
    "ordered.gala",
    "seq.gala",
    "try.gala",
    "tuple.gala",
    # Go source files for stdlib embedding
    "types.go",
    "interfaces.go",
])

# Filegroup for all GALA source files in std - used by tests
filegroup(
    name = "gala_sources",
    srcs = glob(
        ["*.gala"],
        exclude = ["*_test.gala"],
    ),
    visibility = ["//visibility:public"],
)

gala_bootstrap_transpile(
    name = "option_go",
    src = "option.gala",
    out = "option.gen.go",
)

gala_bootstrap_transpile(
    name = "immutable_go",
    src = "immutable.gala",
    out = "immutable.gen.go",
)

gala_bootstrap_transpile(
    name = "tuple_go",
    src = "tuple.gala",
    out = "tuple.gen.go",
)

gala_bootstrap_transpile(
    name = "either_go",
    src = "either.gala",
    out = "either.gen.go",
)

gala_bootstrap_transpile(
    name = "iterable_go",
    src = "iterable.gala",
    out = "iterable.gen.go",
)

gala_bootstrap_transpile(
    name = "seq_go",
    src = "seq.gala",
    out = "seq.gen.go",
)

gala_bootstrap_transpile(
    name = "hashable_go",
    src = "hashable.gala",
    out = "hashable.gen.go",
)

gala_bootstrap_transpile(
    name = "ordered_go",
    src = "ordered.gala",
    out = "ordered.gen.go",
)

gala_bootstrap_transpile(
    name = "try_go",
    src = "try.gala",
    out = "try.gen.go",
)

gala_bootstrap_transpile(
    name = "errors_go",
    src = "errors.gala",
    out = "errors.gen.go",
)

gala_bootstrap_transpile(
    name = "constptr_go",
    src = "constptr.gala",
    out = "constptr.gen.go",
)

go_library(
    name = "std",
    srcs = [
        "constptr.gen.go",
        "either.gen.go",
        "errors.gen.go",
        "hashable.gen.go",
        "immutable.gen.go",
        "interfaces.go",
        "iterable.gen.go",
        "option.gen.go",
        "ordered.gen.go",
        "seq.gen.go",
        "try.gen.go",
        "tuple.gen.go",
        "types.go",
    ],
    importpath = "martianoff/gala/std",
    visibility = ["//visibility:public"],
)

go_test(
    name = "std_go_test",
    srcs = [
        "as_test.go",
        "unapply_test.go",
    ],
    embed = [":std"],
    deps = ["@com_github_stretchr_testify//assert"],
)

gala_go_test(
    name = "std_test",
    srcs = ["std_test.gala"],
)
