load("@rules_go//go:def.bzl", "go_library")
load("//:gala.bzl", "gala_bootstrap_transpile", "gala_go_test", "gala_library")

exports_files([
    "stream.gala",
])

filegroup(
    name = "gala_sources",
    srcs = glob(
        ["*.gala"],
        exclude = ["*_test.gala"],
    ),
    visibility = ["//visibility:public"],
)

gala_bootstrap_transpile(
    name = "stream_go",
    src = "stream.gala",
    out = "stream.gen.go",
)

go_library(
    name = "stream",
    srcs = ["stream.gen.go"],
    importpath = "martianoff/gala/stream",
    visibility = ["//visibility:public"],
    deps = [
        "//collection_immutable",
        "//std",
    ],
)

gala_go_test(
    name = "stream_test",
    srcs = ["stream_test.gala"],
    deps = [
        ":stream",
        "//collection_immutable",
    ],
)
