load("//:gala.bzl", "gala_binary", "gala_bootstrap_transpile", "gala_go_test", "gala_library")
load("@rules_go//go:def.bzl", "go_binary")

exports_files([
    "strings.gala",
])

filegroup(
    name = "gala_sources",
    srcs = glob(
        ["*.gala"],
        exclude = ["*_test.gala"],
    ),
    visibility = ["//visibility:public"],
)

# Bootstrap transpile for stdlib embedding
gala_bootstrap_transpile(
    name = "string_utils_go",
    src = "strings.gala",
    out = "strings.gen.go",
)

gala_library(
    name = "string_utils",
    src = "strings.gala",
    importpath = "martianoff/gala/string_utils",
    visibility = ["//visibility:public"],
    deps = [
        "//collection_immutable",
        "//collection_mutable",
        "//lazy",
    ],
)

gala_go_test(
    name = "string_utils_test",
    srcs = ["strings_test.gala"],
    deps = [
        ":string_utils",
        "//collection_immutable",
    ],
)

gala_binary(
    name = "perf_gala",
    src = "perf_test.gala",
    deps = [":string_utils"],
)

go_binary(
    name = "perf_go",
    srcs = ["go_native_perf_test.go"],
)
