load("//:gala.bzl", "gala_binary", "gala_library", "gala_unit_test")

gala_library(
    name = "test",
    src = "framework.gala",
    importpath = "martianoff/gala/test",
    visibility = ["//visibility:public"],
)

gala_unit_test(
    name = "framework_test",
    src = "framework_test.gala",
    deps = [":test"],
)
