load("//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "test",
    srcs = [
        "framework.gala",
        "assertions.gala",
        "table.gala",
        "bench.gala",
    ],
    importpath = "martianoff/gala/test",
    visibility = ["//visibility:public"],
)

gala_go_test(
    name = "framework_test",
    srcs = ["framework_test.gala"],
)
