load("@rules_go//go:def.bzl", "go_library")
load("//:gala.bzl", "gala_bootstrap_transpile", "gala_go_test")

exports_files([
    "time_utils.gala",
])

filegroup(
    name = "gala_sources",
    srcs = glob(
        ["*.gala"],
        exclude = ["*_test.gala"],
    ),
    visibility = ["//visibility:public"],
)

gala_bootstrap_transpile(
    name = "time_utils_go",
    src = "time_utils.gala",
    out = "time_utils.gen.go",
)

go_library(
    name = "time_utils",
    srcs = ["time_utils.gen.go"],
    importpath = "martianoff/gala/time_utils",
    visibility = ["//visibility:public"],
    deps = [
        "//std",
    ],
)

gala_go_test(
    name = "time_utils_test",
    srcs = ["time_utils_test.gala"],
    deps = [
        ":time_utils",
    ],
)
