load("@rules_go//go:def.bzl", "go_library", "go_test")
load("//:gala.bzl", "gala_bootstrap_transpile")

gala_bootstrap_transpile(
    name = "lib_go",
    src = "lib.gala",
    out = "lib.gen.go",
)

go_library(
    name = "tuple_lib_repro",
    srcs = ["lib.gen.go"],
    importpath = "martianoff/gala/tuple_lib_repro",
    visibility = ["//visibility:public"],
    deps = ["//std"],
)

gala_bootstrap_transpile(
    name = "lib_test_go",
    src = "lib_test.gala",
    out = "lib_test.gen.go",
)

go_test(
    name = "tuple_lib_repro_test",
    srcs = ["lib_test.gen.go"],
    embed = [":tuple_lib_repro"],
    deps = [
        "//go_interop",
        "//std",
    ],
)
