load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gala_lib",
    srcs = ["main.go"],
    importpath = "martianoff/gala/cmd/gala",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/transpiler",
        "//internal/transpiler/analyzer",
        "//internal/transpiler/generator",
        "//internal/transpiler/transformer",
    ],
)

go_binary(
    name = "gala",
    embed = [":gala_lib"],
    visibility = ["//visibility:public"],
)
