load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gala_lib",
    srcs = ["main.go"],
    importpath = "martianoff/gala/cmd/gala",
    visibility = ["//visibility:private"],
    deps = ["//cmd/gala/commands"],
)

go_binary(
    name = "gala",
    embed = [":gala_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "martianoff/gala/cmd/gala/commands.Version": "{STABLE_GALA_VERSION}",
        "martianoff/gala/cmd/gala/commands.GitCommit": "{STABLE_GIT_COMMIT}",
        "martianoff/gala/cmd/gala/commands.BuildDate": "{STABLE_BUILD_DATE}",
    },
)
