load("@rules_go//go:def.bzl", "go_binary", "go_library")

# Bootstrap transpiler without stdlib embedding.
# Used to generate stdlib Go files, breaking the dependency cycle.

go_library(
    name = "gala_bootstrap_lib",
    srcs = ["main.go"],
    importpath = "martianoff/gala/cmd/gala_bootstrap",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/transpiler",
        "//internal/transpiler/analyzer",
        "//internal/transpiler/generator",
        "//internal/transpiler/transformer",
    ],
)

go_binary(
    name = "gala_bootstrap",
    embed = [":gala_bootstrap_lib"],
    visibility = ["//visibility:public"],
)
