load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "gala_test_gen",
    embed = [":gala_test_gen_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "gala_test_gen_lib",
    srcs = ["main.go"],
    importpath = "martianoff/gala/cmd/gala_test_gen",
    visibility = ["//visibility:private"],
)
