load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "stdlib_gen",
    embed = [":stdlib_gen_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "stdlib_gen_lib",
    srcs = ["main.go"],
    importpath = "martianoff/gala/cmd/stdlib_gen",
    visibility = ["//visibility:private"],
)
