package(default_visibility = ["//visibility:public"])

genrule(
    name = "plugin",
    srcs = glob([
        "src/**",
        "build.gradle.kts",
        "settings.gradle.kts",
    ]) + ["@gradle_bin//:all_files"],
    outs = ["gala-intellij-plugin.zip"],
    cmd = """
        export JAVA_HOME=$$(pwd)/$$(echo $(JAVA) | sed 's|/bin/java\\.exe$$||; s|/bin/java$$||')

        # Find gradle_bin location from the input files (bzlmod compatible)
        GRADLE_BIN=$$(dirname $$(dirname $$(echo '$(locations @gradle_bin//:all_files)' | tr ' ' '\\n' | grep 'bin/gradle$$' | head -1)))
        export GRADLE_HOME=$$(pwd)/$$GRADLE_BIN

        # Run gradle from the external repository
        $$GRADLE_HOME/bin/gradle -p ide/intellij buildPlugin --no-daemon

        cp ide/intellij/build/distributions/*.zip $@
    """,
    toolchains = ["@bazel_tools//tools/jdk:current_java_runtime"],
)
