load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "commands",
    srcs = [
        "mod.go",
        "mod_add.go",
        "mod_graph.go",
        "mod_init.go",
        "mod_remove.go",
        "mod_tidy.go",
        "mod_update.go",
        "mod_verify.go",
        "root.go",
        "transpile.go",
        "version.go",
    ],
    importpath = "martianoff/gala/cmd/gala/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/depman/fetch",
        "//internal/depman/graph",
        "//internal/depman/mod",
        "//internal/depman/sum",
        "//internal/depman/version",
        "//internal/transpiler",
        "//internal/transpiler/analyzer",
        "//internal/transpiler/generator",
        "//internal/transpiler/transformer",
        "@com_github_spf13_cobra//:cobra",
    ],
)
